# deval

./: .gitignore  Cargo.toml
deval-cli/: Cargo.toml
deval-cli/src/: main.rs
deval-data-model/: Cargo.toml
deval-data-model/src/: lib.rs
deval-format-json/: Cargo.toml
deval-format-json/src/: lib.rs
deval-format-toml/: Cargo.toml
deval-format-toml/src/: lib.rs
deval-lsp/: Cargo.toml
deval-lsp/src/: document.rs  lib.rs
deval-lsp/src/document/: token_store.rs
deval-schema/: Cargo.toml
deval-schema-ast/: Cargo.toml
deval-schema-ast/src/: lib.rs
deval-schema-from-json-schema/: Cargo.toml
deval-schema-from-json-schema/src/: lib.rs
deval-schema-parser/: Cargo.toml
deval-schema-parser/src/: lib.rs
deval-schema/src/: lib.rs
deval-serde/: Cargo.toml
deval-serde/src/: lib.rs
deval-validator/: Cargo.toml
deval-validator/src/: lib.rs
editors/code/: package-lock.json  package.json
editors/code/src/: main.ts
examples/human/: human.dvl  human.json  human.toml
examples/toml_complex/: data.dvl  data.toml
json-schema-test-runner/: Cargo.toml  README.md
json-schema-test-runner/src/: main.rs
