[package]
name = "deval-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.42", features = ["derive"] }
deval-data-model = { version = "0.1.0", path = "../deval-data-model" }
deval-schema = { version = "0.1.0", path = "../deval-schema" }
deval-validator = { version = "0.1.0", path = "../deval-validator" }
tree-sitter = "0.25.8"
tree-sitter-json = "0.24.8"
