[package]
name = "deval-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.42", features = ["derive"] }
deval-data-model = { version = "0.1.0", path = "../deval-data-model" }
deval-format-json = { version = "0.1.0", path = "../deval-format-json" }
deval-format-toml = { version = "0.1.0", path = "../deval-format-toml" }
deval-schema = { version = "0.1.0", path = "../deval-schema" }
deval-validator = { version = "0.1.0", path = "../deval-validator" }
